--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,123 +1,151 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", sans-serif;
 }
 
-.welcome-section{
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 16px;
-    background-color: white;
+.welcome-section {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 16px;
+  background-color: white;
 }
 
-.message{
-   padding: 20px;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+.message {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.message button{
-    margin-top: 19px;
-    padding: 7px 14px;
-    border: none;
-    background-color: #006241;
-    border-radius: 5px;
-    color: white;
+.message button {
+  margin-top: 19px;
+  padding: 7px 14px;
+  border: none;
+  background-color: #006241;
+  border-radius: 5px;
+  font-weight: 700;
+  color: white;
+  font-size: 19px;
 }
-.message h1{
-    line-height: 1.4;
-    font-size: 36px;
-}
-
-.message span{
-    color: #006241;
+.message h1 {
+  line-height: 1.4;
+  font-size: 36px;
 }
 
-.welcome-img{
-    background-color: red;
-    display: block;
+span {
+  color: #006241;
+  font-weight: 600;
 }
 
-.welcome-img img{
-    display: block;
-    width: 100%;
-    height: auto;
+.welcome-img {
+  background-color: red;
+  display: block;
 }
 
-.community-work{
-    display: grid;
-    grid-template-columns: 1.3fr 2fr;
-    padding: 20px;
-    margin-top: 30px;
-}
-.community-work h2{
-    margin-bottom: 20px;
+.welcome-img img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
-.community-work .projects{
-    text-align: center;
+.community-work {
+  display: grid;
+  grid-template-columns: 1.3fr 2fr;
+  padding: 20px;
+  margin-top: 30px;
+}
+.community-work h2 {
+  margin-bottom: 20px;
 }
 
-.events{
-    /* background-color: red; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.community-work .projects {
+  text-align: center;
 }
 
-.events .card{
-    padding: 12px;
-    width: 80%;
-    height: 70%;
-    background-color: #d4e9e2;
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* x-offset, y-offset, blur, color */
-    border-radius: 10px; /* Optional: smooth corners */
+.events {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
 }
 
-.event-details{
-    background-color: green;
-    height: auto;
-    color: white;
+.events .card {
+  padding: 12px;
+  width: 80%;
+  height: 70%;
+  background-color: #d4e9e2;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* x-offset, y-offset, blur, color */
+  border-radius: 10px; /* Optional: smooth corners */
 }
 
-.education-resources{
-    margin-top: 45px;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.event-details {
+  /* background-color: green; */
+  height: auto;
+  margin-top: 20px;
+}
+.event-details ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.event-details button {
+  background-color: #006241;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  padding: 7px 14px;
+  font-weight: 700;
+  font-size: 19px;
 }
 
-.education-resources h3{
-    width: 700px;
-    margin-bottom: 35px;
+.education-resources {
+  margin-top: 45px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.gallery{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    padding-left: 35px;
-    gap: 12px;
-    height: 500px;
+.education-resources h3 {
+  width: 700px;
+  margin-bottom: 35px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding-left: 35px;
+  gap: 12px;
+  height: 500px;
+  overflow: hidden;
 }
 
 .gallery .img1 {
-    background-color: pink;
-    grid-column: 1/span 1;
+  grid-column: 1 / span 1;
 }
 
 .gallery .img2 {
-    background-color: red;
-    grid-column: 2/span 1;
+  grid-column: 2 / span 1;
 }
 
 .gallery .img3 {
-    grid-row: 2/span 1;
-    grid-column: 1/span 2;
-    background-color: yellow;
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 2;
+  background-color: yellow;
+}
+
+.gallery div img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+button a {
+  text-decoration: none;
+  color: white;
 }
