--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,53 @@
-<div class="gardenHeader">
-    <!-- <img src="../images/GardeningFooterSnip.jpg" alt="Garden picture" class="gardenPicture"> -->
-  </div>
+<!-- <div class="gardenHeader">
+    <img src="../images/GardeningFooterSnip.jpg" alt="Garden picture" class="gardenPicture">
+  </div> -->
 <footer>
-    
-    <p>&copy; 2025 Community Portal</p>
-  </footer>
-  </body>
-  </html>
+  <div class="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-info">
+      <img src="../images/email.png" />
+      <p><strong>Email:</strong> growtogether@gmail.com</p>
+      <img src="../images/phone-call.png" />
+      <p><strong>Phone:</strong> 012 8323 0212</p>
+      <img src="../images/map.png" />
+      <p><strong>Address:</strong> 123 Green Lane, Garden City</p>
+    </div>
+    <hr />
+    <h2>Follow Us</h2>
+    <div class="social-media">
+      <p><strong>Facebook </strong> <img src="../images/facebook.png" /></p>
+      <p><strong>Instagram </strong> <img src="../images/social.png" /></p>
+      <p><strong>Youtube </strong> <img src="../images/youtube.png" /></p>
+    </div>
+  </div>
 
-  
+  <div class="subscribe">
+    <h2>Don’t Miss Out — Subscribe for Weekly Event News</h2>
+    <form class="sub-form">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="Enter email"
+        />
+        <small id="emailHelp" class="form-text text-muted"
+          >We'll never share your email with anyone else.</small
+        >
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Details</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleInputPassword1"
+          placeholder="Name and Surname"
+        />
+      </div>
+
+      <button type="submit" class="btn btn-primary mt-2">Subscribe</button>
+    </form>
+  </div>
+</footer>
